--- a/unit/1/lesson1/css/lesson1.css
+++ b/unit/1/lesson1/css/lesson1.css
@@ -16,12 +16,13 @@ label {
 	width: 260px;
 	padding: 20px;
 	background-color: #fef;
+	width: 190px;
 }
 .buttonDiv button {
 	margin: 10px;
 	width: 40px;
 	height: 40px;
-	font-size: 35px;
+	font-size: 30px;
 	color: #666;
 }
 .buttonDiv {
@@ -30,4 +31,8 @@ label {
 }
 .results {
 	text-align: center;
+}
+form {
+	text-align: center;
+	width: 100%;
 }
